--- a/index.html
+++ b/index.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Freelance Software Developer Portfolio</title>
+  <title>Jalil - Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Freelance Software Developer Portfolio</h1>
-    <p>This is a simple portfolio website for a freelance software developer.</p>
+    <h1>Jalil Tahirov</h1>
+    <p>Thanks for you interest in my services.</p>
+
+    <!-- Add the skills card here -->
+    <div class="card">
+      <div class="card-header">
+        Skills
+      </div>
+      <div class="card-body">
+        <ul>
+          <li>
+            <strong>.NET</strong>
+            <p>Expert in .NET framework and ASP.NET Core</p>
+          </li>
+          <li>
+            <strong>C#</strong>
+            <p>Expert in C# programming language</p>
+          </li>
+          <li>
+            <strong>JavaScript</strong>
+            <p>Proficient in JavaScript and its libraries</p>
+          </li>
+          <li>
+            <strong>Azure</strong>
+            <p>Experience with Azure cloud platform</p>
+          </li>
+          <li>
+            <strong>ASP.NET Core</strong>
+            <p>Experience with ASP.NET Core web development framework</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <ul>
       <li>Skills:</li>
-      <li>HTML</li>
-      <li>CSS</li>
+      <li>.NET</li>
+      <li>C#</li>
       <li>JavaScript</li>
-      <li>Python</li>
-      <li>Java</li>
+      <li>Azure</li>
+      <li>ASP.NET Core</li>
     </ul>
-    <p>Contact me at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+    <p>Contact me at: <a href="mailto:jalil.tahirov@outlook.com">jalil.tahirov@outlook.com</a></p>
   </div>
 </body>
 </html>
