--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
   <div class="container">
     <h1>Jalil Tahirov</h1>
-    <p>Thanks for you interest in my services.</p>
+    <div class="thank-you-card">
+        <p>Thanks for your interest in my services!</p>
+      </div>
 
     <!-- Add the skills card here -->
     <div class="card">
@@ -39,15 +41,6 @@
         </ul>
       </div>
     </div>
-
-    <ul>
-      <li>Skills:</li>
-      <li>.NET</li>
-      <li>C#</li>
-      <li>JavaScript</li>
-      <li>Azure</li>
-      <li>ASP.NET Core</li>
-    </ul>
     <p>Contact me at: <a href="mailto:jalil.tahirov@outlook.com">jalil.tahirov@outlook.com</a></p>
   </div>
 </body>
