--- a/index.html
+++ b/index.html
@@ -11,36 +11,31 @@
         <p>Thanks for your interest in my services!</p>
       </div>
 
-    <!-- Add the skills card here -->
-    <div class="card">
-      <div class="card-header">
-        Skills
-      </div>
-      <div class="card-body">
-        <ul>
-          <li>
-            <strong>.NET</strong>
+      <div class="skills-section">
+        <h2>Skills</h2>
+        <div class="skills-list">
+          <div class="skill">
+            <h3>.NET</h3>
             <p>Expert in .NET framework and ASP.NET Core</p>
-          </li>
-          <li>
-            <strong>C#</strong>
+          </div>
+          <div class="skill">
+            <h3>C#</h3>
             <p>Expert in C# programming language</p>
-          </li>
-          <li>
-            <strong>JavaScript</strong>
+          </div>
+          <div class="skill">
+            <h3>JavaScript</h3>
             <p>Proficient in JavaScript and its libraries</p>
-          </li>
-          <li>
-            <strong>Azure</strong>
+          </div>
+          <div class="skill">
+            <h3>Azure</h3>
             <p>Experience with Azure cloud platform</p>
-          </li>
-          <li>
-            <strong>ASP.NET Core</strong>
+          </div>
+          <div class="skill">
+            <h3>ASP.NET Core</h3>
             <p>Experience with ASP.NET Core web development framework</p>
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
-    </div>
     <p>Contact me at: <a href="mailto:jalil.tahirov@outlook.com">jalil.tahirov@outlook.com</a></p>
   </div>
 </body>
