--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- HTML -->
+<nav class="sidebar">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
   <div class="container">
     <h1>Jalil Tahirov</h1>
     <div class="thank-you-card">
         <p>Thanks for your interest in my services!</p>
-      </div>
+    </div>
 
       <div class="skills-section">
         <h2>Skills</h2>
