--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
 <nav class="sidebar">
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/">Contact</a></li>
     </ul>
   </nav>
 
