--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!-- HTML -->
 <nav class="sidebar">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/">Contact</a></li>
     </ul>
   </nav>
   <div class="container">
